# feedly-entries-processor

./: AGENTS.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: create-bump-pr.yml  workflow.yml
docs/how-to/: add-rule-components.md  develop-and-test.md  run-cli-and-configure.md
docs/reference/: configuration.md
docs/tutorials/: getting-started.md
feedly_entries_processor/: __init__.py  __main__.py  config_loader.py  exceptions.py  feedly_client.py  process.py  rule_matcher.py
feedly_entries_processor/entry_processors/: __init__.py  base_entry_processor.py  log_entry_processor.py  todoist_entry_processor.py
feedly_entries_processor/matchers/: __init__.py  base_matcher.py  stream_id_in_matcher.py
feedly_saved_entries_processor/: __main__.py  config_loader.py  feedly_client.py
src/feedly_entries_processor/: __main__.py  config_loader.py  exceptions.py  feedly_client.py  process.py  settings.py  todoist_client.py
src/feedly_entries_processor/actions/: __init__.py  add_todoist_task_action.py  base_action.py  log_action.py  remove_from_feedly_tag_action.py  run_in_sequence_action.py  run_sequence_action.py  todoist_action.py
src/feedly_entries_processor/conditions/: __init__.py  all_condition.py  base_condition.py  match_all_condition.py  regex_partial_match_condition.py  stream_id_in_condition.py  stream_id_in_list_condition.py
src/feedly_entries_processor/entry_processors/: todoist_entry_processor.py
src/feedly_entries_processor/matchers/: all_matcher.py
src/feedly_entries_processor/sources/: __init__.py  all_source.py  base_source.py  saved_source.py
tests/: __init__.py  conftest.py  helpers.py  test_config_loader.py  test_entry.py  test_feedly_client.py  test_main.py  test_process.py  test_rule_matcher.py  test_todoist_client.py
tests/actions/: __init__.py  test_add_todoist_task_action.py  test_log_action.py  test_remove_from_feedly_tag_action.py  test_run_in_sequence_action.py  test_run_sequence_action.py  test_todoist_action.py
tests/conditions/: __init__.py  test_all_condition.py  test_match_all_condition.py  test_regex_partial_match_condition.py  test_stream_id_in_condition.py  test_stream_id_in_list_condition.py
tests/entry_processors/: test_log_entry_processor.py  test_todoist_entry_processor.py
tests/sources/: __init__.py  test_all_source.py  test_saved_source.py
tests/test_configs/: config_with_all_source.yaml  invalid_schema.yaml  invalid_yaml.yaml  valid_config.yaml
