[project]
name = "feedly-entries-processor"
version = "0.1.0"
description = ""
authors = [
    { name = "dmingn", email = "dmingn@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedly-client>=0.26,<0.28",
    "logzero>=1.7.0,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-yaml>=1.6.0,<2.0.0",
    "todoist-api-python>=3.1.0,<4.0.0",
    "typer>=0.16.0,<0.22.0",
]

[project.scripts]
feedly-entries-processor = "feedly_entries_processor.__main__:app"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
exclude_gitignore = true
strict = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "feedly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logzero"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
